# api/src/main/java/dev/thiagooliveira/syncmoney/core/user/application/dto/InvitationInput.java
@@ -1,0 +1,5 @@
+package dev.thiagooliveira.syncmoney.core.user.application.dto;
+
+import java.util.UUID;
+
+public record InvitationInput(UUID invitedBy, String email, UUID organizationId) {}
