# api/src/main/java/dev/thiagooliveira/syncmoney/core/user/domain/model/InvitationStatus.java
@@ -1,0 +1,6 @@
+package dev.thiagooliveira.syncmoney.core.user.domain.model;
+
+public enum InvitationStatus {
+  PENDING,
+  INVITED;
+}
